examples/cdk/ansible/roles/keos-portworx/files/portworx-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingresskubesystem
  namespace: kube-system
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
